# BIOCLIM

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: bioclim.py  data_downloader.py  pipeline.py
